--- a/score.html
+++ b/score.html
@@ -7,114 +7,167 @@
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
-  /* PAGINA TRASPARENTE (fondamentale per Streamlabs) */
-  html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+  *{ box-sizing:border-box; }
+
+  html, body{
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
     background: transparent !important;
-    overflow: hidden;
+    overflow:hidden;
   }
 
-  /* CONTENITORE OVERLAY */
-  #overlay {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  /* overlay pieno come BITS */
+  #overlay{
+    position: relative;
+    width:100%;
+    height:100%;
     background: transparent !important;
   }
 
-  /* CARD RISULTATO */
-#score {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  /* PANEL = equivalente di #bits-log */
+  #score{
+    position:absolute;
+    inset:0;
+    padding:12px;
 
-  align-items: center;
-  text-align: center;
+    background: rgba(88,7,7,0.70); /* stesso tono di BITS */
+    border-radius:14px;
 
-  /* dimensioni */
-  width: calc(100% - 40px);   /* riempie quasi tutto */
-  max-width: 100%;
-  margin: 0 20px;
-  box-sizing: border-box;
+    display:flex;
+    flex-direction:column;
+    gap:10px;
 
-  /* padding e forma */
-  padding: 14px 18px;
-  border-radius: 18px;
+    font-family:"Anton", sans-serif;
+    color:#fff;
+    text-shadow: 0 0 1px #000, 0 0 2px #000;
 
-  /* grafica */
-  background: rgba(128, 0, 32, 0.80);
-  box-shadow: 0 10px 30px rgba(0,0,0,.35);
+    transition: background .3s ease, opacity .3s ease;
+  }
 
-  /* tipografia */
-  font-family: "Anton", sans-serif;
-  color: #fafafa;
-  text-shadow: 0 2px 6px rgba(0,0,0,.75);
+  /* bordo identico a BITS */
+  #score::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    border-radius:14px;
+    padding:2px;
 
-  /* animazioni */
-  transition: background .3s ease, opacity .3s ease;
-}
+    background: linear-gradient(
+      135deg,
+      rgba(255,255,255,0.95),
+      rgba(255,255,255,0.45),
+      rgba(255,255,255,0.95)
+    );
 
-  /* RIGA 1 (competizione) */
-  #comp {
-    font-size: clamp(14px, 2.4vw, 20px);
-    letter-spacing: .10em;
+    -webkit-mask:
+      linear-gradient(#000 0 0) content-box,
+      linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor;
+            mask-composite: exclude;
+
+    box-shadow: 0 0 12px rgba(255,255,255,0.25);
+    pointer-events:none;
+  }
+
+  /* contenuto sopra al bordo */
+  #score > *{ position:relative; z-index:1; }
+
+  /* HEADER gemello di BITS: usiamo #comp come header */
+  #comp{
+    font-size:1.4em;
+    letter-spacing:1px;
     text-transform: uppercase;
-    opacity: .78;
+
+    background: linear-gradient(
+      to bottom,
+      rgba(255,255,255,0.95),
+      rgba(240,240,240,0.95)
+    );
+
+    color:#831d1c;
+    text-shadow:none;
+
+    padding:6px 10px;
+    border-radius:8px;
+    text-align:center;
+    position:relative;
+
+    opacity:1; /* qui non lo rendiamo trasparente: è un header */
   }
 
-  /* prefissi stato */
-  #score[data-mode="LIVE"] #comp::before { content: "LIVE • "; color: #ff3b3b; }
-  #score[data-mode="NEXT"] #comp::before { content: "PROSSIMA • "; color: #ffd369; }
-  #score[data-mode="LAST"] #comp::before { content: "ULTIMO • "; color: #9ad0ff; }
+  #comp::after{
+    content:"";
+    position:absolute;
+    left:10%;
+    right:10%;
+    bottom:-3px;
+    height:2px;
+
+    background: linear-gradient(
+      to right,
+      rgba(255,255,255,0),
+      rgba(255,255,255,0.9),
+      rgba(255,255,255,0)
+    );
+
+    border-radius:2px;
+    opacity:.8;
+  }
 
   /* RIGA 2 (squadre) */
-#line {
-  font-size: clamp(32px, 6.8vw, 54px);
-  line-height: 1.05;
-  font-weight: 700;
-  padding-bottom: 6px;
-  border-bottom: 1px solid rgba(255,255,255,0.25);
-}
+  #line{
+    font-size: clamp(32px, 6.8vw, 54px);
+    line-height: 1.05;
+    font-weight: 700;
+
+    padding: 8px 10px;
+    border-radius: 10px;
+
+    background: rgba(0,0,0,0.15);
+    border: 1px solid rgba(255,255,255,0.12);
+    text-align:center;
+  }
 
   /* RIGA 3 (data) */
-  #line2 {
+  #line2{
     font-size: clamp(18px, 3.2vw, 26px);
-    opacity: .9;
+    opacity: .95;
+    text-align:center;
   }
 
-  #score[data-mode="LIVE"] #comp::before {
-  content: "LIVE ";
-  color: #ff3b3b;
-}
-
-#score[data-mode="LIVE"] #comp::after {
-  content: "●";
-  color: #ff3b3b;
-  margin-left: 6px;
-  display: inline-block;
-  animation: livePulse 1.2s infinite ease-in-out;
-}
-  #score[data-mode="ERROR"] {
-    opacity: 0.7;
+  /* LIVE dot pulse */
+  @keyframes livePulse {
+    0%   { transform: scale(1);   opacity: 1; }
+    50%  { transform: scale(1.4); opacity: 0.5; }
+    100% { transform: scale(1);   opacity: 1; }
   }
 
-@keyframes livePulse {
-  0%   { transform: scale(1);   opacity: 1; }
-  50%  { transform: scale(1.4); opacity: 0.5; }
-  100% { transform: scale(1);   opacity: 1; }
-}
+  /* Prefissi stato: ora #comp è "header", quindi usiamo ::before/::after SOLO per la parte LIVE */
+  #score[data-mode="NEXT"] #comp::before { content: "PROSSIMA • "; }
+  #score[data-mode="LAST"] #comp::before { content: "ULTIMO • "; }
 
+  #score[data-mode="NEXT"] #comp::before { color: #b86a00; } /* oro scuro leggibile su header chiaro */
+  #score[data-mode="LAST"] #comp::before { color: #2b5d8a; }
 
+  #score[data-mode="LIVE"] #comp::before{
+    content:"LIVE ";
+    color:#c01818;
+  }
+  #score[data-mode="LIVE"] #comp::after{
+    content:"●";
+    color:#c01818;
+    margin-left:6px;
+    display:inline-block;
+    animation: livePulse 1.2s infinite ease-in-out;
+  }
+
+  #score[data-mode="ERROR"]{ opacity:.7; }
   </style>
 </head>
 
 <body>
-
   <div id="overlay">
     <div id="score">
       <div id="comp"></div>
@@ -123,7 +176,6 @@
     </div>
   </div>
 
-<script src="score.js?v=999"></script>
-
+  <script src="score.js?v=1000"></script>
 </body>
 </html>
