--- a/score.html
+++ b/score.html
@@ -162,6 +162,10 @@
     display:inline-block;
     animation: livePulse 1.2s infinite ease-in-out;
   }
+    
+  #score[data-mode="LIVE"] #line {
+  font-size: clamp(42px, 8vw, 68px);
+}
 
   #score[data-mode="ERROR"]{ opacity:.7; }
   </style>
