--- a/overlay.html
+++ b/overlay.html
@@ -11,7 +11,6 @@ html,body{
   background:transparent;
 }
 
-/* canvas totale */
 #overlay{
   width:1920px;
   height:1080px;
@@ -19,18 +18,16 @@ html,body{
   overflow:hidden;
 }
 
-/* sfondo rosso */
+/* sfondo gradiente + pattern */
 #background{
   position:absolute;
   inset:0;
 }
 
-/* gradiente base */
 #background::before{
   content:"";
   position:absolute;
   inset:0;
-
   background: linear-gradient(
     90deg,
     #380303 0%,
@@ -39,7 +36,6 @@ html,body{
   );
 }
 
-/* pattern sopra */
 #background::after{
   content:"";
   position:absolute;
@@ -47,39 +43,35 @@ html,body{
 
   background: repeating-linear-gradient(
     -35deg,
-    #000000 0px,
-    #000000 10px,
+    #ffffff 0px,
+    #ffffff 10px,
     transparent 10px,
     transparent 20px
   );
 
-  opacity:0.12;   /* regola qui la visibilità */
+  mix-blend-mode: overlay;
+  opacity:0.20;
 }
 
-/* cornice */
-#frame{
+/* BUCO */
+#hole{
   position:absolute;
 
   width:1411px;
   height:874px;
 
-  left:55px;
-  top:89px;
+  left:50%;
+  transform:translateX(-50%);
+  bottom:55px;
 
-  background:rgba(255,255,255,0.97);
+  background:transparent;   /* niente bianco */
+
   border-radius:2px;
 
+  /* bordo sottilissimo e stacco */
   box-shadow:
-    0 10px 25px rgba(0,0,0,.45),
-    inset 0 0 0 10px rgba(255,255,255,.95);
-}
-
-/* foro trasparente */
-#hole{
-  position:absolute;
-  inset:3px;
-  background:transparent;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,.18);
+    inset 0 0 0 3px rgba(255,255,255,0.9),
+    inset 0 2px 8px rgba(0,0,0,.25);
 }
 </style>
 </head>
@@ -87,11 +79,7 @@ html,body{
 <body>
 <div id="overlay">
   <div id="background"></div>
-
-  <div id="frame">
-    <div id="hole"></div>
-  </div>
-
+  <div id="hole"></div>
 </div>
 </body>
 </html>
