--- a/ticker.html
+++ b/ticker.html
@@ -63,7 +63,7 @@
     // "BADGE|testo"
     const MESSAGES = [
       "SUPPORTAMI |Scrivi !sub o !prime per evitare le pubblicità",
-      "@MatteoTorinoFC |Facebook - Instagram - YouTube - TikTok - X - Twitch - Spotify"
+      "@MatteoTorinoFC |Seguimi su Facebook - Instagram - YouTube - TikTok - X - Twitch - Spotify"
     ];
 
     const canvas = document.getElementById("ticker");
