--- a/last.html
+++ b/last.html
@@ -163,12 +163,12 @@
     <div id="events-inner">
       <div class="event-row" id="row-sub">
         <div class="event-label">Ultima Sub</div>
-        <div class="event-value" id="last-sub">—</div>
+        <div class="event-value" id="last-sub"></div>
       </div>
 
       <div class="event-row" id="row-follow">
         <div class="event-label">Ultimo Follower</div>
-        <div class="event-value" id="last-follow">—</div>
+        <div class="event-value" id="last-follow"></div>
       </div>
     </div>
   </div>
