--- a/overlay-2cam.html
+++ b/overlay-2cam.html
@@ -77,11 +77,15 @@ html,body{
 /* divisore verticale */
 #divider-v{
   position:absolute;
-  width:5px;
+  width:30px;
   height:874px;
   left: calc(55px + (1411px / 2) - 2.5px);
   bottom:89px;
-  background:var(--lineColor);
+  background: linear-gradient(
+    180deg,
+    #831d1c 0%,
+    #5f0a0a 100%
+    );
   box-shadow:0 0 6px rgba(0,0,0,.35);
 }
 </style>
