--- a/overlay-4cam.html
+++ b/overlay-4cam.html
@@ -11,7 +11,6 @@ html,body{
   background:transparent;
 }
 
-/* DIMENSIONI */
 :root{
   --W:1920px;
   --H:1080px;
@@ -22,10 +21,17 @@ html,body{
   --holeL:55px;
   --holeB:89px;
 
+  --divider:30px;
+
   --lineColor:rgba(255,255,255,0.95);
 }
 
-/* CANVAS */
+/* coordinate */
+:root{
+  --holeT: calc(var(--H) - var(--holeH) - var(--holeB));
+  --holeR: calc(var(--W) - var(--holeW) - var(--holeL));
+}
+
 #overlay{
   width:var(--W);
   height:var(--H);
@@ -33,7 +39,7 @@ html,body{
   overflow:hidden;
 }
 
-/* SFONDO */
+/* sfondo */
 .panel{
   position:absolute;
   background-image:
@@ -48,57 +54,49 @@ html,body{
   background-size:1920px 1080px;
 }
 
-/* coordinate utili */
-:root{
-  --holeT: calc(1080px - 874px - 89px);
-  --holeR: calc(1920px - 1411px - 55px);
-}
-
 /* pannelli */
 .top{ left:0; top:0; width:1920px; height:var(--holeT); }
-.bottom{ left:0; bottom:0; width:1920px; height:89px; background-position:0 calc(-1080px + 89px); }
-.left{ left:0; top:var(--holeT); width:55px; height:874px; background-position:0 calc(-1 * var(--holeT)); }
-.right{ left:calc(55px + 1411px); top:var(--holeT); width:var(--holeR); height:874px; }
+.bottom{ left:0; bottom:0; width:1920px; height:var(--holeB); }
+.left{ left:0; top:var(--holeT); width:var(--holeL); height:var(--holeH); }
+.right{ left:calc(var(--holeL) + var(--holeW)); top:var(--holeT); width:var(--holeR); height:var(--holeH); }
 
-/* bordo esterno */
+/* bordo */
 #outline{
   position:absolute;
-  left:55px;
-  bottom:89px;
-  width:1411px;
-  height:874px;
+  left:var(--holeL);
+  bottom:var(--holeB);
+  width:var(--holeW);
+  height:var(--holeH);
   pointer-events:none;
+
   box-shadow:
     0 0 0 3px var(--lineColor) inset,
     0 10px 25px rgba(0,0,0,0.35);
+
   border-radius:2px;
 }
 
 /* divisori */
 .divider{
   position:absolute;
-  background: linear-gradient(
-    180deg,
-    #831d1c 0%,
-    #5f0a0a 100%
-  );
-  box-shadow:0 0 6px rgba(0,0,0,.35);
+  background:var(--lineColor);
+  box-shadow:0 0 8px rgba(0,0,0,.35);
 }
 
 /* verticale */
 #divider-v{
-  width:30px;
-  height:874px;
-  left: calc(55px + (1411px / 2) - 2.5px);
-  bottom:89px;
+  width:var(--divider);
+  height:var(--holeH);
+  left: calc(var(--holeL) + (var(--holeW) / 2) - (var(--divider) / 2));
+  bottom:var(--holeB);
 }
 
 /* orizzontale */
 #divider-h{
-  width:1411px;
-  height:30px;
-  left:55px;
-  bottom: calc(89px + (874px / 2) - 2.5px);
+  width:var(--holeW);
+  height:var(--divider);
+  left:var(--holeL);
+  bottom: calc(var(--holeB) + (var(--holeH) / 2) - (var(--divider) / 2));
 }
 </style>
 </head>
