--- a/overlay-2cam.html
+++ b/overlay-2cam.html
@@ -23,7 +23,7 @@ html,body{ margin:0; padding:0; background:transparent; }
 
   --strokeColor: rgba(255,255,255,0.95);
 
-  --dividerFill: linear-gradient(180deg, #831d1c 0%, #5f0a0a 100%);
+  --dividerFill: #5f0a0a;
 }
 
 /* coordinate utili */
