--- a/overlay-4cam.html
+++ b/overlay-4cam.html
@@ -23,7 +23,7 @@ html,body{ margin:0; padding:0; background:transparent; }
 
   --strokeColor: rgba(255,255,255,0.95);
 
-  --crossFill: linear-gradient(180deg, #380303 0%, #5f0a0a 100%);
+  --crossFill: #5f0a0a;
 }
 
 /* coordinate utili */
