Fix typos in bitlist descriptions

--- a/bitlist.html
+++ b/bitlist.html
@@ -149,7 +149,7 @@ body {
   <div id="bits-inner">
     <div class="bits-row">
       <div class="bits-amount">30</div>
-      <div class="bits-desc">Coro "Cairo Vattene"</div>
+      <div class="bits-desc">"Cairo Vattene"</div>
     </div>
 
     <div class="bits-row">
@@ -159,17 +159,17 @@ body {
 
     <div class="bits-row">
       <div class="bits-amount">100</div>
-      <div class="bits-desc">Legge Messaggio</div>
+      <div class="bits-desc">Leggo Messaggio</div>
     </div>
 
     <div class="bits-row">
       <div class="bits-amount">200</div>
-      <div class="bits-desc">Coro "Chi non salta è un gobbo"</div>
+      <div class="bits-desc">"Chi non salta è un gobbo"</div>
     </div>
 
     <div class="bits-row">
       <div class="bits-amount">1000</div>
-      <div class="bits-desc">Messaggio Live per 3'</div>
+      <div class="bits-desc">Messaggio in Live per 3'</div>
     </div>
   </div>
 </div>
