Wrap bit descriptions in italics

--- a/bitlist.html
+++ b/bitlist.html
@@ -149,7 +149,7 @@ body {
   <div id="bits-inner">
     <div class="bits-row">
       <div class="bits-amount">30</div>
-      <div class="bits-desc">"Cairo Vattene"</div>
+      <div class="bits-desc"><i>"Cairo Vattene"</i></div>
     </div>
 
     <div class="bits-row">
@@ -164,7 +164,7 @@ body {
 
     <div class="bits-row">
       <div class="bits-amount">200</div>
-      <div class="bits-desc">"Chi non salta è un gobbo"</div>
+      <div class="bits-desc"><i>"Chi non salta è un gobbo"</i></div>
     </div>
 
     <div class="bits-row">
